<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.techskuad.reminderapp.viewmodel.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_login"
                android:layout_marginTop="@dimen/_50sdp"
                app:layout_constraintBottom_toTopOf="@id/gdLoginOne"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gdLoginOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".35" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLetsSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="10sp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/let_s_sign_you_in"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gdLoginOne" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:letterSpacing="0.02"
                android:text="@string/welcome_back_you_ve_been_missed"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@id/etEmail"
                app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
                app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
                app:layout_constraintTop_toBottomOf="@id/tvLetsSignIn" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@id/viewOne"
                app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
                app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/your_email"
                    android:inputType="text"
                    android:text="@={vm.email}"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/viewOne"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/_8f92a1"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
                app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@id/viewTwo"
                app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
                app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
                app:layout_constraintTop_toBottomOf="@id/viewOne"
                app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={vm.password}"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/viewTwo"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/_8f92a1"
                app:layout_constraintBottom_toTopOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
                app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button_bg"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="7sp"
                android:onClick="@{vm::login}"
                android:padding="@dimen/_5sdp"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@id/tvLetsSignIn"
                app:layout_constraintStart_toStartOf="@id/tvLetsSignIn"
                app:layout_constraintTop_toBottomOf="@id/viewTwo" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>