<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.techskuad.reminderapp.viewmodel.ReminderViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/add_reminder"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etReminderTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clToolBar">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/reminder_title"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={vm.reminderTitle}"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:id="@+id/viewOne"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/_8f92a1"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etReminderTitle" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etReminderDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewOne">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/description"
            android:inputType="text"
            android:maxLines="3"
            android:text="@={vm.reminderDescription}"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/_8f92a1"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etReminderDesc" />
    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time :-"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/etReminderDesc"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        />
    <TextView
        android:id="@+id/txtTimeSet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/etReminderDesc"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="start"
        android:text="@{vm.selectedTime}"
        android:onClick="@{vm::onClick}"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@id/txtTime"
        />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date :-"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/txtTime"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        />
    <TextView
        android:id="@+id/txtDateSet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:onClick="@{vm::onClick}"
        app:layout_constraintTop_toBottomOf="@id/txtTimeSet"
        android:layout_marginTop="@dimen/_25sdp"
        android:gravity="start"
        android:text="@{vm.selectedDate}"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@id/txtDate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20sdp"
        />

    <TextView
        android:id="@+id/txtReminderType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Type :-"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/txtDate"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txtReminderType"
        android:id="@+id/myRadioGroup"
        app:layout_constraintTop_toBottomOf="@id/txtDate"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
         >

        <RadioButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dailyRadio"
            android:checked="@={vm.daily}"
            android:text="@string/daily" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weeklyRadio"
            android:checked="@={vm.weekly}"
            android:text="@string/weekly" />

    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAddReminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_bg"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="7sp"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/add_reminder"
        android:onClick="@{vm::onClick}"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/txtReminderType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>